styles.css
@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght,WONK@0,9..144,700,0..1;1,9..144,700,0..1&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  --dark-cyan: hsl(158, 36%, 37%);
  --cream: hsl(30, 38%, 92%);

  --very-dark-blue: hsl(212, 21%, 14%);
  --dark-grayish-blue: hsl(228, 12%, 48%);
  --white: hsl(0, 0%, 100%);

  --primary-font: "Montserrat", sans-serif;
  --secundary-font: "Fraunces", serif;
}

body {
  font-family: var(--primary-font);
  font-size: clamp(0.8rem, 2vw, 1rem);
  background-color: var(--cream);
  margin: 0;
  padding: 20px;
}

h1 {
  font-family: var(--secundary-font);
  font-size: clamp(2rem, 6vw, 2.5rem);
  color: var(--very-dark-blue);
  margin-bottom: 1rem;
}

.container {
  width: 40%;
  margin: 10rem auto 0;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  background-color: var(--white);
  border-radius: 10px;
}

.product-image {
  background-image: url("./images/image-product-desktop.jpg");
  background-size: cover;
  background-position: center;
  height: 100%;
  border-radius: 10px 0 0 10px;
}

.product-info {
  padding: 2.5rem;
}

.product-info p {
  color: var(--dark-grayish-blue);
}

.prices {
  display: flex;
  justify-content: left;
  align-items: center;
  margin-top: 1rem;
}

.product-discount {
  font-family: var(--secundary-font);
  color: var(--dark-cyan);
  font-weight: 700;
  font-size: clamp(2rem, 5vw, 2.5rem);
  margin-right: 2rem;
}

.product-price {
  font-size: clamp(1rem, 3vw, 1.2rem);
  text-decoration: line-through;
}

.add-to-cart-button {
  background-color: var(--dark-cyan);
  color: var(--white);
  width: 100%;
  font-weight: 700;
  padding: 1rem 2rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin-top: 1rem;
  align-items: center;

  transition: background-color 0.3s ease;
}

.add-to-cart-button__car {
  margin-right: 1rem;
}

@media (max-width: 768px) {
  .container {
    margin: 2rem auto;
    width: 90%;
    grid-template-columns: none;
    grid-template-rows: repeat(2, 1fr);
  }

  .product-image {
    background-image: url("./images/image-product-mobile.jpg");
    border-radius: 10px 10px 0 0;
    width: 100%;
  }

  .prices {
    justify-content: left;
  }
}

.add-to-cart-button:hover {
  background-color: hsl(158, 36%, 27%);
}

.perfume{
  text-transform: uppercase;
  letter-spacing: 10px;
}

